feature #626, add "remove album" link when more than 2 combined albums

--- a/themes/default/theme.css
+++ b/themes/default/theme.css
@@ -784,3 +784,11 @@ LEGEND {
 .selectize-dropdown [data-selectable], .selectize-dropdown .optgroup-header {
     padding: 0px 5px !important;
 }
+
+a.removeTag {
+  border:none;
+}
+
+a.removeTag img {
+  vertical-align:bottom;
+}
