--- a/themes/default/theme.css
+++ b/themes/default/theme.css
@@ -792,3 +792,31 @@ a.removeTag {
 a.removeTag img {
   vertical-align:bottom;
 }
+
+.badge::before {
+  content:"[";
+}
+.badge::after {
+  content:"]";
+}
+
+/* A nicer (more modern) way to present badge, with a background color and no brackets */
+
+/*
+.badge::before, .badge::after {
+  content:none;
+}
+
+.badge {
+  display: inline-block;
+  min-width: 5px;
+  padding: 3px 7px;
+  color: #eee;
+  line-height: 1;
+  vertical-align: middle;
+  white-space: nowrap;
+  text-align: center;
+  background-color: #666;
+  border-radius: 10px;
+}
+*/
