make sure the badge is not sticked to the album name

--- a/themes/default/theme.css
+++ b/themes/default/theme.css
@@ -793,6 +793,10 @@ a.removeTag img {
   vertical-align:bottom;
 }
 
+#menubar .badge {
+  margin-left:5px;
+}
+
 .badge::before {
   content:"[";
 }
