--- a/admin/themes/default/fontello/css/fontello.css
+++ b/admin/themes/default/fontello/css/fontello.css
@@ -2,12 +2,12 @@
 
  @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?16615516');
-  src: url('../font/fontello.eot?16615516#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?16615516') format('woff2'),
-       url('../font/fontello.woff?16615516') format('woff'),
-       url('../font/fontello.ttf?16615516') format('truetype'),
-       url('../font/fontello.svg?16615516#fontello') format('svg');
+  src: url('../font/fontello.eot?7354540');
+  src: url('../font/fontello.eot?7354540#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?7354540') format('woff2'),
+       url('../font/fontello.woff?7354540') format('woff'),
+       url('../font/fontello.ttf?7354540') format('truetype'),
+       url('../font/fontello.svg?7354540#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?16615516#fontello') format('svg');
+    src: url('../font/fontello.svg?7354540#fontello') format('svg');
   }
 }
 */
@@ -65,11 +65,13 @@
 .icon-pencil:before { content: '\270e'; } /* '✎' */
 .icon-plus-circled:before { content: '\2795'; } /* '➕' */
 .icon-asl:before { content: '\e0ad'; } /* '' */
+.icon-bell:before { content: '\e0d1'; } /* '' */
 .icon-eye:before { content: '\e70a'; } /* '' */
 .icon-tags:before { content: '\e70d'; } /* '' */
 .icon-chat:before { content: '\e720'; } /* '' */
 .icon-trash:before { content: '\e729'; } /* '' */
 .icon-basket:before { content: '\e73d'; } /* '' */
+.icon-database:before { content: '\e754'; } /* '' */
 .icon-puzzle:before { content: '\e7b6'; } /* '' */
 .icon-language:before { content: '\e800'; } /* '' */
 .icon-signal:before { content: '\e801'; } /* '' */
@@ -164,6 +166,8 @@
 .icon-toggle-on:before { content: '\f205'; } /* '' */
 .icon-television:before { content: '\f26c'; } /* '' */
 .icon-picture:before { content: '🌄'; } /* '\1f304' */
+.icon-globe:before { content: '🌎'; } /* '\1f30e' */
+.icon-doc:before { content: '📄'; } /* '\1f4c4' */
 .icon-shuffle:before { content: '🔀'; } /* '\1f500' */
 .icon-lock:before { content: '🔒'; } /* '\1f512' */
 .icon-link:before { content: '🔗'; } /* '\1f517' */
