--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -1921,6 +1921,8 @@ h2:lang(en) { text-transform:capitalize; }
 .infos .submit {margin-left:30px;}
 
 .checkActions {text-align:left;padding:0;margin:0;}
+#user-table-content #checkActions {margin:0; display:flex; flex-wrap:wrap; align-items:center;}
+#user-table-content #checkActions a {padding:10px; margin: 0 4px};
 #checkActions {text-align:left; margin:0 0 20px 0;}
 .ActionUserList #checkActions {margin: 20px 0 20px 0;}
 
@@ -4613,18 +4615,23 @@ li.plupload_delete a:hover {background: url("images/cancelhover.svg")!important;
 #action_delete_derivatives label, #action_generate_derivatives label {display: flex; margin-top: 4px; width: 50%;}
 #action_delete_derivatives input[name="del_derivatives_type[]"], #action_generate_derivatives input[name="generate_derivatives_type[]"] {margin-right: 3px;}
 .actionButtons:first-child::after,#filter_prefilter::before,#filter_category::before,#filter_level::before,
-.permitActionListButton div::before, #action_level::after, .pictureLevels::before {
+.permitActionListButton div::before, #action_level::after, .pictureLevels::before,
+.user-action-select-container::before, .advanced-filter-select-container::before,
+.user-property-select-container::before  {
   content: '\e835'; font-size: 17px; position: absolute; font-family: "fontello"; color: #6E6E6E; pointer-events: none;
 }
 .permitActionListButton div::before {margin-left: 250px; margin-top: 11px;}
 .pictureLevels::before {margin-left: 216px; margin-top: 10px;}
 .permitActionListButton div.hidden::after {display: none;}
+.user-action-select-container::before {top: 5px; right:10px}
+.user-property-select-container::before {margin-top: 10px; margin-left:270px;}
+.advanced-filter-select-container::before {top: 5px; right:10px}
 #filter_prefilter::before {margin-left: 257px; margin-top: 35px;}
 #filter_category .selectize-control.single .selectize-input::after {content: none;}
 #filter_category {width: 600px;}
 #filter_category::before {margin-left: 565px;margin-top: 33px; z-index: 2;}
 #filter_level::before {margin-top: 34px; margin-left: 260px;}
-#action_level::after {margin-top: -56px; margin-left: 254px;}
+#batchManagerGlobal #action_level::after {margin-top: -56px; margin-left: 254px;}
 #filter_search input {width: 300px; box-sizing: border-box; padding: 11px 18px;}
 #applyFilter, #addFilter,#filterList select, #filter_tags .selectize-input.items.not-full.has-options, .pictureLevels select, #permitAction select{
 	font-family: "Open Sans", "Lucida Grande",Verdana,Arial,"Bitstream Vera Sans",sans-serif;
