Adding switch btn -> //TODO

--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -1948,7 +1948,7 @@ h2:lang(en) { text-transform:capitalize; }
 .pluginBoxesTitle span {border-radius: 50%; margin-right: 5px; padding: 4px}
 
 .pluginBoxesTitle {display: flex;align-items: center}
-.pluginFilter {justify-content: end;position: absolute;right: 20px; z-index: 2; transform: translateY(6px);}
+.pluginFilter {justify-content: end;position: absolute;right: 120px; z-index: 2; transform: translateY(6px);}
 
 .pluginBoxesCount {
   background-color: rgb(150, 150, 150);
@@ -2035,6 +2035,7 @@ h2:lang(en) { text-transform:capitalize; }
 .pluginActionLevel3 {/*padding-left: 10px; opacity: 0.9;*/padding:5px 0}
 .plugin-inactive .pluginContent{
   border:none;
+  border-left: solid 5px #999999;
   /*border-radius:10px;*/
 }
 
