Adding th-large to fontello

--- a/admin/themes/default/fontello/css/fontello-codes.css
+++ b/admin/themes/default/fontello/css/fontello-codes.css
@@ -91,6 +91,7 @@
 .icon-shuffle:before { content: '\e858'; } /* '' */
 .icon-asl:before { content: '\e859'; } /* '' */
 .icon-mobile:before { content: '\e85a'; } /* '' */
+.icon-th-large:before { content: '\e85b'; } /* '' */
 .icon-hdd:before { content: '\f0a0'; } /* '' */
 .icon-tasks:before { content: '\f0ae'; } /* '' */
 .icon-filter:before { content: '\f0b0'; } /* '' */
