--- a/admin/themes/default/fontello/css/fontello-codes.css
+++ b/admin/themes/default/fontello/css/fontello-codes.css
@@ -92,6 +92,7 @@
 .icon-asl:before { content: '\e859'; } /* '' */
 .icon-mobile:before { content: '\e85a'; } /* '' */
 .icon-th-large:before { content: '\e85b'; } /* '' */
+.icon-pause:before { content: '\e85c'; } /* '' */
 .icon-hdd:before { content: '\f0a0'; } /* '' */
 .icon-tasks:before { content: '\f0ae'; } /* '' */
 .icon-filter:before { content: '\f0b0'; } /* '' */
