--- a/admin/themes/default/fontello/css/fontello.css
+++ b/admin/themes/default/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?30536935');
-  src: url('../font/fontello.eot?30536935#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?30536935') format('woff2'),
-       url('../font/fontello.woff?30536935') format('woff'),
-       url('../font/fontello.ttf?30536935') format('truetype'),
-       url('../font/fontello.svg?30536935#fontello') format('svg');
+  src: url('../font/fontello.eot?48480986');
+  src: url('../font/fontello.eot?48480986#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?48480986') format('woff2'),
+       url('../font/fontello.woff?48480986') format('woff'),
+       url('../font/fontello.ttf?48480986') format('truetype'),
+       url('../font/fontello.svg?48480986#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?30536935#fontello') format('svg');
+    src: url('../font/fontello.svg?48480986#fontello') format('svg');
   }
 }
 */
@@ -148,6 +148,7 @@
 .icon-asl:before { content: '\e859'; } /* '' */
 .icon-mobile:before { content: '\e85a'; } /* '' */
 .icon-th-large:before { content: '\e85b'; } /* '' */
+.icon-pause:before { content: '\e85c'; } /* '' */
 .icon-hdd:before { content: '\f0a0'; } /* '' */
 .icon-tasks:before { content: '\f0ae'; } /* '' */
 .icon-filter:before { content: '\f0b0'; } /* '' */
