--- a/admin/themes/roma/theme.css
+++ b/admin/themes/roma/theme.css
@@ -279,8 +279,8 @@ a.stat-box:hover {
 
 .AlbumViewSelector {background: #555555;}
 .AlbumViewSelector input:checked + label span {color: #999999;}
-.pluginBox, .pluginContent, .pluginMiniBox, .groups li, .groups .GroupContainer {background-color:#333;color:#999;border-color:#333; box-shadow: none;}
-.pluginMiniBox {border-left: solid 5px #ffc17e;}
+.pluginBox, .pluginContent, .pluginMiniBox, .groups li, .groups .GroupContainer {background-color:#333;color:#999;border-right-color:#333; box-shadow: none;}
+.pluginMiniBox {border-left: none;}
 .pluginBoxNameCell, .pluginMiniBoxNameCell {color:#aaa;}
 .pluginBox.incompatible, .pluginMiniBox.incompatible {border-color:#800 !important;}
 .pluginBoxes .merged, .pluginBoxes .missing {background-color:#422;border:1px solid #800;}
