Purge cache section added. Need to set cache data dynamicaly Need to add translation keys

--- a/admin/themes/roma/theme.css
+++ b/admin/themes/roma/theme.css
@@ -1105,3 +1105,12 @@ li.plupload_delete a:hover {background: url("images/cancelhover.svg")!important;
 .move-cat-container .move-cat-toogler{
   color:#ffa744;
 }
+
+.multiple-pictures-sizes, .multiple-compiledTemplate-sizes, .cache-size-value {
+  background: #555555;
+  color: #c1c1c1;
+}
+
+.cache-lastCalculated-value, .cache-lastCalculated-text, .cache-size-text, .picture-deletion-size, #label-delete-size-checkbox {
+  color: #c1c1c1;
+}
