--- a/admin/themes/default/fontello/css/fontello.css
+++ b/admin/themes/default/fontello/css/fontello.css
@@ -2,12 +2,12 @@
 
  @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?16615516');
-  src: url('../font/fontello.eot?16615516#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?16615516') format('woff2'),
-       url('../font/fontello.woff?16615516') format('woff'),
-       url('../font/fontello.ttf?16615516') format('truetype'),
-       url('../font/fontello.svg?16615516#fontello') format('svg');
+  src: url('../font/fontello.eot?59394289');
+  src: url('../font/fontello.eot?59394289#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?59394289') format('woff2'),
+       url('../font/fontello.woff?59394289') format('woff'),
+       url('../font/fontello.ttf?59394289') format('truetype'),
+       url('../font/fontello.svg?59394289#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?16615516#fontello') format('svg');
+    src: url('../font/fontello.svg?59394289#fontello') format('svg');
   }
 }
 */
@@ -131,6 +131,7 @@
 .icon-flow-tree:before { content: '\e839'; } /* '' */
 .icon-link-1:before { content: '\e83a'; } /* '' */
 .icon-user-minus:before { content: '\e83b'; } /* '' */
+.icon-th-large:before { content: '\e83b'; } /* '' */
 .icon-user-1:before { content: '\e83c'; } /* '' */
 .icon-users-1:before { content: '\e83d'; } /* '' */
 .icon-clone:before { content: '\e83e'; } /* '' */
@@ -141,6 +142,7 @@
 .icon-zoom-square:before { content: '\e843'; } /* '' */
 .icon-grip-vertical-solid:before { content: '\e844'; } /* '' */
 .icon-dice-solid:before { content: '\e845'; } /* '' */
+.icon-pause:before { content: '\e85c'; } /* '' */
 .icon-hdd:before { content: '\f0a0'; } /* '' */
 .icon-tasks:before { content: '\f0ae'; } /* '' */
 .icon-filter:before { content: '\f0b0'; } /* '' */
