FIx code duplicate for fontIcons

--- a/admin/themes/default/fontello/css/fontello-codes.css
+++ b/admin/themes/default/fontello/css/fontello-codes.css
@@ -74,8 +74,8 @@
 .icon-th-1:before { content: '\e838'; } /* '' */
 .icon-flow-tree:before { content: '\e839'; } /* '' */
 .icon-link-1:before { content: '\e83a'; } /* '' */
-.icon-user-minus:before { content: '\e83b'; } /* '' */
 .icon-th-large:before { content: '\e83b'; } /* '' */
+.icon-user-minus:before { content: '\e83c'; } /* '' */
 .icon-user-1:before { content: '\e83c'; } /* '' */
 .icon-users-1:before { content: '\e83d'; } /* '' */
 .icon-clone:before { content: '\e83e'; } /* '' */
