--- a/admin/themes/default/fontello/css/fontello.css
+++ b/admin/themes/default/fontello/css/fontello.css
@@ -2,12 +2,12 @@
 
  @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?59394289');
-  src: url('../font/fontello.eot?59394289#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?59394289') format('woff2'),
-       url('../font/fontello.woff?59394289') format('woff'),
-       url('../font/fontello.ttf?59394289') format('truetype'),
-       url('../font/fontello.svg?59394289#fontello') format('svg');
+  src: url('../font/fontello.eot?92659824');
+  src: url('../font/fontello.eot?92659824#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?92659824') format('woff2'),
+       url('../font/fontello.woff?92659824') format('woff'),
+       url('../font/fontello.ttf?92659824') format('truetype'),
+       url('../font/fontello.svg?92659824#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?59394289#fontello') format('svg');
+    src: url('../font/fontello.svg?92659824#fontello') format('svg');
   }
 }
 */
@@ -130,8 +130,8 @@
 .icon-th-1:before { content: '\e838'; } /* '' */
 .icon-flow-tree:before { content: '\e839'; } /* '' */
 .icon-link-1:before { content: '\e83a'; } /* '' */
-.icon-user-minus:before { content: '\e83b'; } /* '' */
 .icon-th-large:before { content: '\e83b'; } /* '' */
+.icon-user-minus:before { content: '\e83c'; } /* '' */
 .icon-user-1:before { content: '\e83c'; } /* '' */
 .icon-users-1:before { content: '\e83d'; } /* '' */
 .icon-clone:before { content: '\e83e'; } /* '' */
