--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -1980,7 +1980,7 @@ h2:lang(en) { text-transform:capitalize; }
 .pluginMiniBox {
   display:flex;
   width:260px;
-  margin:15px 30px;
+  margin:15px;
   border-top-right-radius:5px;
   border-bottom-right-radius:5px;
   margin-left: 0;
@@ -1994,7 +1994,7 @@ h2:lang(en) { text-transform:capitalize; }
   padding: 15px;
   position: relative;
   border-left: solid 5px #ffc17e;
-  border-right:solid 5px #fafafa;
+  /* border-right:solid 5px #fafafa; */
   border-radius: 5px;
 }
 
