--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -2024,20 +2024,21 @@ h2:lang(en) { text-transform:capitalize; }
   margin-top:15px;
   font-size:12px;
 }
-
+/* 
 .pluginActions > * {
   padding: 10px 4px;
   text-align: center;
   display:block;
-}
+} */
 .pluginEmptyInput {width: 90px;}
 .pluginUnavailableAction {
-  opacity: 0.5;
+  opacity: 0.5 !important;
   font-size: 12px;
-  padding: 10px 4px;
-  margin-top: 15px;
-  background-color:#ddd;
+  padding: 2px 10px;
+  /* margin-top: 15px; */
+  background-color:#ddd !important;
   font-weight:700;
+  border-radius: 5px;
 }
 .pluginActionLevel1 {background-color: #ffc17e; font-weight: bold;}
 .pluginActionLevel1:hover {background-color: #ff7700; color: white; text-decoration: none;}
