--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -1984,7 +1984,8 @@ h2:lang(en) { text-transform:capitalize; }
   border-top-right-radius:5px;
   border-bottom-right-radius:5px;
   margin-left: 0;
-  box-shadow: 0px 0px 5px #acacac;
+  /* box-shadow: 0px 0px 5px #acacac; */
+  box-shadow: 1px 1px 0px 1px #e0e0e0;
 }
 .PluginOptionsBlock a:hover { color: white ;}
 .pluginContent {
@@ -1994,8 +1995,10 @@ h2:lang(en) { text-transform:capitalize; }
   padding: 15px;
   position: relative;
   border-left: solid 5px #ffc17e;
+  border-top-right-radius:5px;
+  border-bottom-right-radius:5px;
   /* border-right:solid 5px #fafafa; */
-  border-radius: 5px;
+  /* border-radius: 5px; */
 }
 
 .pluginMiniBoxNameCell {
