--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -2077,6 +2077,41 @@ h2:lang(en) { text-transform:capitalize; }
   padding: 13px;
 }
 
+.pluginTypeFilter .filter {
+  display: none;
+}
+
+.pluginTypeFilter {
+  display: flex;
+  flex-direction: row;
+
+  position: absolute;
+
+  left: 225px;
+  z-index: 2;
+
+  transform: translateY(13px);
+}
+
+.pluginTypeFilter label {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  width: 70px;
+  height: 30px;
+
+  color: #898989;
+  background: #f3f3f3;
+  box-shadow: 0px 2px #00000024;
+}
+
+.pluginTypeFilter input:checked + label{
+  background: #ffa500;
+  color: white;
+  box-shadow: 0 2px #d18800;
+}
 
  .PluginOptionsBlock{
     display:none;
