--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -2113,6 +2113,21 @@ h2:lang(en) { text-transform:capitalize; }
   box-shadow: 0 2px #d18800;
 }
 
+.pluginContainer.line .pluginMiniBox:hover .pluginContent{
+  transition: 0.4s;
+  background: #ffe5cc;
+}
+
+.pluginContainer.line .pluginMiniBox:hover.plugin-inactive .slider {
+  transition: 0.4s;
+  background: #999999;
+}
+
+.pluginContainer.line .pluginMiniBox:hover .pluginContent .pluginActions a{
+  color: #ffffff;
+  opacity: 1;
+}
+
  .PluginOptionsBlock{
     display:none;
     position:absolute;
