--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -4881,3 +4881,63 @@ li.plupload_delete a:hover {background: url("images/cancelhover.svg")!important;
 }
 
 .doubleSelect p {display:flex; justify-content: center;}
+
+/* Activity Tab in user manager */
+
+.select-user {
+  background: #fafafa;
+  height: 50%;
+
+  display: flex;
+  align-items: center;
+
+  padding: 0 20px;
+
+  box-shadow: 0px 2px 4px #00000024;
+  border-radius: 5px;
+}
+
+.start-date, 
+.end-date {
+    padding: 5px 10px;
+    background: #eaeaea;
+    border-radius: 50px;
+    margin: 5px;
+}
+
+.acivity-time-text {
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.line {
+  background: #fafafa;
+  box-shadow: 0px 2px 4px #00000024;
+
+  display: flex;
+  flex-direction: row;
+
+  height: 40px;
+
+  align-items: center;
+
+  margin-bottom: 10px;
+}
+
+.line .detail-item {
+  background: #f0f0f0f0;
+  margin: 0 10px 0 0;
+  padding: 3px 6px;
+  border-radius: 20px;
+
+  min-width: 50px; 
+  max-width: 150px;
+
+  text-align: center;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  cursor: default;
+
+  white-space: nowrap;
+}
